--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,16 +1,49 @@
 {
   "name": "@blossom-carousel/vue",
   "version": "0.0.1",
+  "author": "Jesper Vos",
+  "license": "MIT",
+  "description": "A native-scroll-first carousel component for Vue.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jespervos/blossom-carousel"
+  },
+  "bugs": {
+    "url": "https://github.com/jespervos/blossom-carousel/issues"
+  },
+  "homepage": "https://www.blossom-carousel.com",
+  "keywords": [
+    "blossom",
+    "carousel",
+    "slider",
+    "slideshow",
+    "scroll",
+    "scroller",
+    "drag",
+    "dragging",
+    "js",
+    "vanilla",
+    "javascript",
+    "typescript",
+    "web",
+    "html",
+    "css",
+    "svelte",
+    "react",
+    "vue"
+  ],
   "type": "module",
   "files": [
     "dist"
   ],
   "main": "dist/blossom-carousel-vue.umd.cjs",
   "module": "dist/blossom-carousel-vue.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/blossom-carousel-vue.js",
-      "require": "./dist/blossom-carousel-vue.umd.cjs"
+      "require": "./dist/blossom-carousel-vue.umd.cjs",
+      "types": "./dist/index.d.ts"
     },
     "./style.css": "./dist/blossom-carousel-vue.css"
   },
