--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,7 +1,55 @@
 {
   "name": "@blossom-carousel/svelte",
   "version": "0.0.1",
+  "author": "Jesper Vos",
+  "license": "MIT",
+  "description": "A native-scroll-first carousel component for Svelte.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jespervos/blossom-carousel"
+  },
+  "bugs": {
+    "url": "https://github.com/jespervos/blossom-carousel/issues"
+  },
+  "homepage": "https://www.blossom-carousel.com",
+  "keywords": [
+    "blossom",
+    "carousel",
+    "slider",
+    "slideshow",
+    "scroll",
+    "scroller",
+    "drag",
+    "dragging",
+    "js",
+    "vanilla",
+    "javascript",
+    "typescript",
+    "web",
+    "html",
+    "css",
+    "svelte",
+    "react",
+    "vue"
+  ],
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/blossom-carousel-svelte.umd.cjs",
+  "module": "dist/blossom-carousel-svelte.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/blossom-carousel-svelte.js",
+      "require": "./dist/blossom-carousel-svelte.umd.cjs",
+      "types": "./dist/index.d.ts"
+    },
+    "./style.css": "./dist/blossom-carousel-svelte.css"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
