--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,8 +42,7 @@
   "exports": {
     ".": {
       "import": "./dist/blossom-carousel-vue.js",
-      "require": "./dist/blossom-carousel-vue.umd.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/blossom-carousel-vue.umd.cjs"
     },
     "./style.css": "./dist/blossom-carousel-vue.css"
   },
@@ -56,15 +55,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@blossom-carousel/core": "workspace:*"
+    "@blossom-carousel/core": "^0.0.2"
   },
   "peerDependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "vite": "^6.3.1",
     "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^6.3.1",
     "vite-plugin-dts": "^4.5.3"
   }
 }
