--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -42,8 +42,7 @@
   "exports": {
     ".": {
       "import": "./dist/blossom-carousel-svelte.js",
-      "require": "./dist/blossom-carousel-svelte.umd.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/blossom-carousel-svelte.umd.cjs"
     },
     "./style.css": "./dist/blossom-carousel-svelte.css"
   },
@@ -56,11 +55,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@blossom-carousel/core": "workspace:*"
+    "@blossom-carousel/core": "^0.0.2"
   },
   "devDependencies": {
-    "svelte": "^3.59.0",
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "svelte": "^3.59.0",
     "vite": "^4.4.0",
     "vite-plugin-dts": "^4.5.3"
   }
