--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -42,8 +42,7 @@
   "exports": {
     ".": {
       "import": "./dist/blossom-carousel-vue.js",
-      "require": "./dist/blossom-carousel-vue.umd.cjs",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/blossom-carousel-vue.umd.cjs"
     },
     "./style.css": "./dist/blossom-carousel-vue.css"
   },
@@ -56,7 +55,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@blossom-carousel/core": "workspace:*"
+    "@blossom-carousel/core": "^0.0.2"
   },
   "peerDependencies": {
     "vue": "^3.5.13"
