--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -43,7 +43,8 @@
     ".": {
       "import": "./dist/blossom-carousel-web.js",
       "require": "./dist/blossom-carousel-web.umd.cjs"
-    }
+    },
+    "./style.css": "./dist/blossom-carousel-web.css"
   },
   "publishConfig": {
     "access": "public"
