--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blossom-carousel/svelte",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Jesper Vos",
   "license": "MIT",
   "description": "A native-scroll-first carousel component for Svelte.",
@@ -41,10 +41,10 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/blossom-carousel-svelte.js",
       "require": "./dist/blossom-carousel-svelte.umd.cjs"
-    },
-    "./style.css": "./dist/blossom-carousel-svelte.css"
+    }
   },
   "publishConfig": {
     "access": "public"
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.0",
     "svelte": "^3.59.0",
+    "typescript": "^5.0.0",
     "vite": "^4.4.0",
     "vite-plugin-dts": "^4.5.3"
   },
