--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blossom-carousel/vue",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "author": "Jesper Vos",
   "license": "MIT",
   "description": "A native-scroll-first carousel component for Vue.",
@@ -41,6 +41,7 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/blossom-carousel-vue.js",
       "require": "./dist/blossom-carousel-vue.umd.cjs"
     },
