--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -60,6 +60,7 @@
     "react-dom": "^18.0.0 || >=19.0.0-0"
   },
   "devDependencies": {
+    "@types/react": "^18.0.0 || >=19.0.0-0",
     "@vitejs/plugin-react": "^4.0.0",
     "vite": "^6.3.1",
     "vite-plugin-dts": "^4.5.3"
