--- a/packages/alpine/package.json
+++ b/packages/alpine/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@blossom-carousel/react",
-  "version": "0.1.14",
+  "name": "@blossom-carousel/alpine",
+  "version": "0.1.0",
   "author": "Jesper Vos",
   "license": "MIT",
-  "description": "A native-scroll-first carousel component for React.",
+  "description": "A native-scroll-first carousel component for Alpine.js.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jespervos/blossom-carousel"
@@ -22,30 +22,28 @@
     "drag",
     "dragging",
     "js",
-    "vanilla",
     "javascript",
     "typescript",
     "web",
     "html",
     "css",
-    "svelte",
-    "react",
-    "vue"
+    "alpine",
+    "alpinejs"
   ],
   "type": "module",
   "files": [
     "dist"
   ],
-  "main": "dist/blossom-carousel-react.umd.cjs",
-  "module": "dist/blossom-carousel-react.js",
+  "main": "dist/blossom-carousel-alpine.umd.cjs",
+  "module": "dist/blossom-carousel-alpine.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/blossom-carousel-react.js",
-      "require": "./dist/blossom-carousel-react.umd.cjs"
+      "import": "./dist/blossom-carousel-alpine.js",
+      "require": "./dist/blossom-carousel-alpine.umd.cjs"
     },
-    "./style.css": "./dist/blossom-carousel-react.css"
+    "./style.css": "./dist/blossom-carousel-alpine.css"
   },
   "publishConfig": {
     "access": "public"
@@ -56,17 +54,17 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || >=19.0.0-0",
-    "react-dom": "^18.0.0 || >=19.0.0-0"
+    "alpinejs": "^3.0.0"
   },
   "devDependencies": {
+    "@types/alpinejs": "^3.13.10",
     "@types/node": "^22.10.5",
-    "@types/react": "^18.0.0 || >=19.0.0-0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^6.3.1",
-    "vite-plugin-dts": "^4.5.3"
+    "alpinejs": "^3.15.0",
+    "typescript": "^5.9.3",
+    "vite": "^7.1.8",
+    "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
-    "@blossom-carousel/core": "^0.1.9"
+    "@blossom-carousel/core": "workspace:*"
   }
 }
