--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "dev:vue": "pnpm --filter @blossom-carousel/vue dev",
     "dev:react": "pnpm --filter @blossom-carousel/react dev",
     "dev:svelte": "pnpm --filter @blossom-carousel/svelte dev",
-    "dev:web": "pnpm --filter @blossom-carousel/web dev"
+    "dev:web": "pnpm --filter @blossom-carousel/web dev",
+    "publish:all": "node scripts/publish-all.js patch",
+    "publish:minor": "node scripts/publish-all.js minor",
+    "publish:major": "node scripts/publish-all.js major",
+    "release": "./scripts/publish-simple.sh patch",
+    "release:minor": "./scripts/publish-simple.sh minor",
+    "release:major": "./scripts/publish-simple.sh major"
   },
   "workspaces": [
     "packages/*"
