--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -60,12 +60,15 @@
     "react-dom": "^18.0.0 || >=19.0.0-0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0 || >=19.0.0-0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^6.3.1",
-    "vite-plugin-dts": "^4.5.3"
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "@vitejs/plugin-react": "^5.0.4",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "vite": "^7.1.10",
+    "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
-    "@blossom-carousel/core": "^0.1.9"
+    "@blossom-carousel/core": "^0.2.0"
   }
 }
