--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@blossom-carousel/react",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "author": "Jesper Vos",
   "license": "MIT",
   "description": "A native-scroll-first carousel component for React.",
@@ -56,16 +56,16 @@
     "preview": "vite preview"
   },
   "peerDependencies": {
-    "react": "^18.0.0 || >=19.0.0-0",
-    "react-dom": "^18.0.0 || >=19.0.0-0"
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0 || >=19.0.0-0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^6.3.1",
-    "vite-plugin-dts": "^4.5.3"
+    "@types/react": "^19.2.7",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.0",
+    "vite-plugin-dts": "^4.5.4"
   },
   "dependencies": {
-    "@blossom-carousel/core": "^0.2.0"
+    "@blossom-carousel/core": "workspace:^"
   }
 }
