--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -56,6 +56,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "typescript": "^5.9.3",
     "vite": "^7.3.0",
     "vite-plugin-dts": "^4.5.4"
